[gd_scene load_steps=6 format=3 uid="uid://ynhj3j0rshb7"]

[ext_resource type="PackedScene" uid="uid://8k17luuqyim" path="res://Marble.tscn" id="1_gwidm"]
[ext_resource type="Script" uid="uid://c1drnkycrwu5j" path="res://MarbleMaze.gd" id="1_ijigb"]
[ext_resource type="PackedScene" uid="uid://cf88kyul4lvcn" path="res://wall.tscn" id="2_iasie"]
[ext_resource type="Texture2D" uid="uid://bgt23pef6i6jo" path="res://clipart982.png" id="3_iasie"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iasie"]

[node name="MarbleMaze" type="Node2D"]
script = ExtResource("1_ijigb")

[node name="MazeContainer" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="StartPosition" type="Node2D" parent="MazeContainer"]
position = Vector2(195, 201)

[node name="Walls" type="Node2D" parent="MazeContainer"]
position = Vector2(-574, -319)

[node name="Wall" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(74, 171)

[node name="Wall2" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(200, 159)
scale = Vector2(1, 3)

[node name="Wall3" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(123, 302)

[node name="Wall4" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(61, 435)

[node name="Wall9" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(134, 573)

[node name="Wall10" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(263, 504)

[node name="Wall11" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(394, 504)

[node name="Wall12" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(464, 577)

[node name="Wall13" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(394, 432)

[node name="Wall14" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(453, 356)

[node name="Wall15" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(454, 274)

[node name="Wall16" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(453, 190)

[node name="Wall17" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(398, 147)

[node name="Wall18" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(454, 147)

[node name="Wall19" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(596, 76)

[node name="Wall20" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(596, 216)

[node name="Wall21" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(599, 356)

[node name="Wall22" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(741, 131)

[node name="Wall24" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(890, 78)

[node name="Wall25" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(890, 224)

[node name="Wall29" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(1023, 146)

[node name="Wall30" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(1021, 296)

[node name="Wall31" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(889, 368)

[node name="Wall32" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(890, 512)

[node name="Wall33" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(964, 578)

[node name="Wall34" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(964, 495)

[node name="Wall35" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(964, 427)

[node name="Wall36" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(966, 367)

[node name="Wall26" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(742, 274)

[node name="Wall27" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(742, 423)

[node name="Wall28" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(741, 576)

[node name="Wall23" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(601, 500)

[node name="Wall5" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(198, 432)

[node name="Wall6" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(262, 378)

[node name="Wall7" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(332, 301)

[node name="Wall8" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(333, 147)

[node name="OuterWallTop" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(585, 0)
scale = Vector2(15, 1)

[node name="OuterWallBottom" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(585, 656)
scale = Vector2(15, 1)

[node name="OuterWallLeft" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(-2, 337)
scale = Vector2(1, 8)

[node name="OuterWallRight" parent="MazeContainer/Walls" instance=ExtResource("2_iasie")]
position = Vector2(1156, 316)
scale = Vector2(1, 8)

[node name="Goal" type="Area2D" parent="MazeContainer"]
position = Vector2(473, 231)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/Goal"]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_iasie")

[node name="Sprite2D" type="Sprite2D" parent="MazeContainer/Goal"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_iasie")

[node name="Marble" parent="MazeContainer" instance=ExtResource("1_gwidm")]
position = Vector2(-482, -223)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="RestartButton" type="Button" parent="UI"]
offset_left = 584.0
offset_top = 306.0
offset_right = 592.0
offset_bottom = 314.0
